# hermes-seo

./: .env.example  .gitignore  ANALYSE_CAHIER_AUDIT.html  ARCHIVAGE_2026-06-23.md  ARCHIVAGE_2026-06-24_PIPELINE5.md  ARCHIVAGE_2026-06-25_SESSION_V6.5.md  CAHIER_DES_CHARGES.md  DEPLOIEMENT.md  Dockerfile  GUIDE_OAUTH_GSC.html  HERMES_7_PIPELINES.html  HERMES_7_PIPELINES_V2.html  HERMES_7_PIPELINES_V3.html  HERMES_7_PIPELINES_V4.html  HERMES_7_PIPELINES_V5.html  HERMES_7_PIPELINES_V6.5.html  HERMES_7_PIPELINES_V6.html  HERMES_ARCHITECTURE_SUIVI.html  HERMES_ARCHITECTURE_SUIVI_V2.html  HERMES_ARCHITECTURE_SUIVI_V3.html  HERMES_ARCHITECTURE_SUIVI_V4.html  HERMES_ARCHITECTURE_SUIVI_V5.html  HERMES_ARCHITECTURE_SUIVI_V6.5.html  HERMES_ARCHITECTURE_SUIVI_V6.html  HERMES_V7_ROADMAP_100.html  MISSION_HERMES.md  PIPELINE_AUDIT_ARCHITECTURE.html  PROMPT_0_CONTEXTE_PERMANENT.md  PROMPT_1_MINI_ANALYSE_SERP.md  PROMPT_2_REDACTION.md  PROMPT_3_AUTO_AUDIT.md  PROMPT_MAITRE_REDACTION_SEO.md  RAPPORT_FINAL.html  RAPPORT_FINAL_28JUIN.html  RAPPORT_HERMES_SEO.md  RESUME_REPRISE.md  SECURITY.md  agents_registry.yaml  app.py  article_cleantout37.html  (+7 more)
.streamlit/: config.toml
Cleantout37/: P4_SERP_Visibility.html  P5_Strategie.html  P6_Backlinks.html  RAPPORT_SYNTHETIQUE_COMPLET.html  README.md  raw_data.json
audit_final/: GAP_ANALYSIS_630.html  PLAN_ACTION_630_COMPLET.html  PLAN_ACTION_PRIORISE_CLIENT.html  RAPPORT_AUDIT_COMPLET.html  RAPPORT_AUDIT_SYSTEMIQUE.html  RAPPORT_COMPLET_27JUIN.html
data/: serp_visibility.db
fixtures/: strategie_fixtures.json
hermes/: __init__.py  config.py  headless.py  main.py  (+1 more)
(+419 files in other folders)
