[project]
name = "hermes-seo"
version = "0.1.0"
description = "Hermes SEO v3 - Usine éditoriale multi-agents SEO/AEO/GEO"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hermes SEO Team" }
]

dependencies = [
    # Orchestration
    "langgraph>=0.3.0",
    "langgraph-supervisor>=0.0.10",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # Validation
    "pydantic>=2.0",

    # LLM SDKs
    "anthropic>=0.40.0",
    "openai>=1.60.0",

    # Mémoire
    "chromadb>=0.5.0",

    # Logging & monitoring
    "loguru>=0.7.0",

    # Utilitaires
    "tenacity>=8.0",
    "tiktoken>=0.7.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",

    # CMS (optionnel)
    "python-wordpress-xmlrpc>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
]

shopify = ["shopify-api-py>=0.1"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests that chain multiple agents.",
]

[tool.pytest-cov]
omit = ["tests/*"]

[project.scripts]
hermes = "hermes.main:cli"
